# playlistify

./: .env  .gitignore  Cargo.toml  README.md
src/: conf.rs  main.rs
src/api/: oauth.rs
