[package]
name = "playlistify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
error-chain = "0.12.4"
futures = "0.3.24"
open = "3.0.3"
pkce = "0.1.1"
reqwest = { version = "0.11.12", features = ["blocking", "serde_json", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = "1.21.2"
